--- a/letsencrypt/build.yaml
+++ b/letsencrypt/build.yaml
@@ -5,9 +5,9 @@ build_from:
   armhf: ghcr.io/home-assistant/armhf-base-python:3.9-alpine3.14
   armv7: ghcr.io/home-assistant/armv7-base-python:3.9-alpine3.14
   i386: ghcr.io/home-assistant/i386-base-python:3.9-alpine3.14
-codenotary:
-  signer: notary@home-assistant.io
-  base_image: notary@home-assistant.io
+#codenotary:
+#  signer: notary@home-assistant.io
+#  base_image: notary@home-assistant.io
 args:
   CRYPTOGRAPHY_VERSION: 36.0.2
   CERTBOT_DNS_DIRECTADMIN_VERSION: 0.0.24
@@ -15,4 +15,5 @@ args:
   CERTBOT_GANDI_VERSION: 1.3.2
   CERTBOT_NETCUP_VERSION: 1.1.1
   CERTBOT_NJALLA_VERSION: 1.0.0
+  CERTBOT_NAMECOM_VERSION: 1.0.0
   CERTBOT_VERSION: 1.21.0
