--- a/letsencrypt/build.yaml
+++ b/letsencrypt/build.yaml
@@ -15,5 +15,5 @@ args:
   CERTBOT_GANDI_VERSION: 1.3.2
   CERTBOT_NETCUP_VERSION: 1.1.1
   CERTBOT_NJALLA_VERSION: 1.0.0
-  CERTBOT_NAMECOM_VERSION: 1.0.0
+  CERTBOT_DNS_NAMECOM_VERSION: 1.0.2-1
   CERTBOT_VERSION: 1.21.0
