--- a/letsencrypt/config.yaml
+++ b/letsencrypt/config.yaml
@@ -76,6 +76,8 @@ schema:
     joker_password: str?
     namecheap_username: str?
     namecheap_api_key: str?
+    multi_provider: str?
+    multi_vars: str?
     netcup_api_key: str?
     netcup_api_password: str?
     netcup_customer_id: str?
@@ -91,7 +93,8 @@ schema:
     provider: "list(dns-azure|dns-cloudflare|dns-cloudns|dns-desec|\
       dns-digitalocean|dns-directadmin|dns-dnsimple|dns-dnsmadeeasy|\
       dns-duckdns|dns-dynu|dns-gehirn|dns-google|dns-google-domains|\
-      dns-hetzner|dns-infomaniak|dns-joker|dns-linode|dns-luadns|dns-njalla|dns-nsone|\
+      dns-hetzner|dns-infomaniak|dns-joker|dns-linode|dns-luadns|\
+      dns-multi|dns-njalla|dns-nsone|\
       dns-porkbun|dns-ovh|dns-rfc2136|dns-route53|dns-sakuracloud|\
       dns-namecheap|dns-netcup|dns-gandi|dns-transip|dns-inwx|dns-dreamhost|\
       dns-he|dns-easydns|dns-domainoffensive|dns-websupport)?"
